<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.carpentry.QuestionnaireCarpentry">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="30dp">

        <TextView
            android:id="@+id/textView_questionnaireOrderNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/order_number"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView_questionnaireTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionnaire_time_text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDate_questionnaireTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="datetime"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:id="@+id/textView_questionnaireDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionnaire_date_text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDate_questionnaireDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="date"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView_questionnaireProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionnaire_product_text"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_questionnaireProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />
        <Spinner
            android:id="@+id/spinner_questionnaireProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:minHeight="48dp"
            android:text=""
            />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_questionnaireProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionnaire_problem_text"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText_questionnaireProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView_questionnaireSolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionnaire_solution_text"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText_questionnaireSolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />


        <TextView
            android:id="@+id/textView_questionnaireCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionnaire_cost_text"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText_questionnaireCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/button_reportDeviation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_button"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck"
            android:layout_marginTop="40dp"/>

    </LinearLayout>
</ScrollView>