<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:gravity="center_horizontal"
            android:text="@string/order_overview"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="8dp"
            card_view:contentPadding="10dp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:text="@string/order_date_text"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:text="@string/order_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_modifyDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/modify_button"
                    android:visibility="visible"
                    card_view:cornerRadius="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_hoursWorked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="8dp"
            card_view:contentPadding="10dp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_hoursWorkedText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:text="@string/order_hours_worked_text"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_hoursWorked"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:text="@string/order_hours_worked"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />

                <Button
                    android:id="@+id/button_modifyHoursWorked"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/modify_button"
                    android:visibility="visible"
                    card_view:cornerRadius="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_orderInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="8dp"
            card_view:contentPadding="10dp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_orderNumberText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:padding="6dp"
                        android:text="@string/order_number_text"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_orderNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:padding="6dp"
                        android:text="@string/order_number"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="RtlCompat" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_orderNameText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:padding="6dp"
                        android:text="@string/order_name_text"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_orderName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:padding="6dp"
                        android:text="@string/order_name"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="RtlCompat" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_orderProducts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center_vertical"
                        android:padding="6dp"
                        android:text="@string/order_products"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button_viewProducts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/view_button"
                        android:visibility="visible"
                        card_view:cornerRadius="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_orderMaterials"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center_vertical"
                        android:padding="6dp"
                        android:text="@string/order_materials"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button_viewMaterials"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/view_button"
                        android:visibility="visible"
                        card_view:cornerRadius="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/customerContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_orderCustomerContact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center_vertical"
                        android:padding="6dp"
                        android:text="@string/order_customerContact"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button_orderCustomerContact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/call_button"
                        android:visibility="visible"
                        card_view:cornerRadius="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/customerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_orderCustomerAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center_vertical"
                        android:padding="6dp"
                        android:text="@string/order_customerAddress"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button_orderCustomerAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/map_button"
                        android:visibility="visible"
                        card_view:cornerRadius="20dp" />
                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_reportDeviation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="8dp"
            card_view:contentPadding="10dp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_orderReport"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:text="@string/order_report"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_reportDeviation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:text="@string/report_button"
                    android:visibility="visible"
                    card_view:cornerRadius="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>